<resources>
    <string name="app_name">Trackg</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="text_about_us">"Здраствуйте,мы команда Trackg!
        Это приложение создано для помощи отслеживания геолокации общественного транспорта.
        Надеюсь наша команда сможет вам помочь в вашем маршруте. С уважением команда проекта Trackg!"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_buses">Все автобусы</string>
    <string name="confirm_delete">Потвердить удаление</string>
    <string name="press_again_to_exit" >Нажмите еще раз для выхода</string>
    <string name="confirm_logout" >Потвердите выход</string>
    <string name="ok">Ок</string>
    <string name="error_login">Ошибка входа</string>
    <string name="user_deleted">Пользователь удален</string>
    <string name="turn_on_location">Включить местоположение</string>
    <string name="service_stopped">Сервис остановлен</string>
    <string name="dismiss">Отклонять</string>
    <string name="next">Следующий</string>
    <string name="settings_incompatible" >Настройки невозможны</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="confirm_save" >Потвердите сохранение</string>
    <string name="confirm_delete_id" >Потвердите удаление id</string>
    <string name="operation_successful"> Выполнено успешно</string>
    <string name="op_failed" > Выполнена не успешно  </string>
    <string name="enter_reg_key" > Изменить ключ </string>
    <string name="take_pic_from"> Выбрать фото из</string>
    <string name="online_buses" > Онлайн автобусы </string>
    <string name="pending_requests" > Ожидающие запросы </string>
    <string name="offline" > Оффлайн </string>
    <string name="broadcasting" > Трансляция </string>
    <string name="sharing_location" > Поделиться геолокацией </string>
    <string name="cancel" > Отмена </string>
    <string name="accept" > Применить </string>
    <string name="delete_this_item" > Удалить </string>
    <string name="broadcast_my_location" > Трансляция моего местоположения </string>
    <string name="a_short_message_to_broadcast" > Короткое сообщение к трансляции </string>
    <string name="nav_header_subtitle" > user@gmail.com  </string>
    <string name="nav_header_title" > Имя пользователя  </string>
    <string name="nav_header_desc" > Navigation header  </string>
    <string name="select_buses_to_subscribe" />
    <string name="no_item" />

    <string name="pending_buses" />
    <string name="pending_passengers" />
    <string name="about" />
    <string name="logout" />
    <string name="reject" > Отклонить  </string>
    <string name="delete" > Удалить </string>
    <string name="more_options" > Другие опции  </string>
    <string name="edit_subscription" />
    <string name="all_passengers" > Все пассажиры </string>
    <string name="change_reg_key" />
    <string name="broadcast" />
    <string name="wait_for_approval" />
</resources>